--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "react-dom": "^18.2.0",
     "shiki": "^1.22.2",
     "tinycolor2": "^1.6.0",
-    "vscode-textmate": "^9.0.0"
+    "vscode-textmate": "^9.0.0",
+    "framer-motion": "^11.0.3",
+    "lucide-react": "^0.330.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1",
+    "sonner": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
@@ -22,6 +28,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^5.1.0"
   }
 }
