--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "derive-valtio": "^0.2.0",
+    "framer-motion": "^11.0.3",
+    "lucide-react": "^0.330.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "shiki": "^1.22.2",
-    "tinycolor2": "^1.6.0",
-    "vscode-textmate": "^9.0.0",
-    "framer-motion": "^11.0.3",
-    "lucide-react": "^0.330.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
-    "sonner": "^1.4.0"
+    "tinycolor2": "^1.6.0",
+    "valtio": "^2.1.2",
+    "vscode-textmate": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
